--- a/cafe.html
+++ b/cafe.html
@@ -5,10 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cafe webpage</title>
     <style>
-      
+      .container{
+        display: flex;
+        flex-direction: row;
+        background-color: #862d2d;
+        height: 50px;
+        width: 1320px;
+        padding: 5px;
+        border-radius: 5px;
+      }
     </style>
 </head>
 <body>
+    <div class="container">
+        <a href=""></a>
+    </div>
    <img src="coffee.png" height="885px" alt="coffee image"/>
+   
 </body>
 </html>
