--- a/cafe.html
+++ b/cafe.html
@@ -1,26 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cafe webpage</title>
     <style>
-      .container{
-        display: flex;
-        flex-direction: row;
-        background-color: #862d2d;
-        height: 50px;
-        width: 1320px;
-        padding: 5px;
-        border-radius: 5px;
-      }
+        .container {
+            display: flex;
+            flex-direction: row;
+            background-color: #862d2d;
+            height: 50px;
+            width: 1320px;
+            padding: 20px;
+            border-radius: 5px;
+            color: white;
+            font-size: 20px;
+            position: static;
+
+        }
     </style>
 </head>
+
 <body>
     <div class="container">
-        <a href=""></a>
+        <img src="coffeelogo.png" height="70px" alt="logo" />
+        <h2><b>CAFENOD</b></h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <p>HOME</p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <p>ABOUT</p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <p>SHOP</p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <p>PAGES</p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <p>BLOG</p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <p>CONTACT US</p>
     </div>
-   <img src="coffee.png" height="885px" alt="coffee image"/>
-   
+    <img src="coffee.png" height="885px" alt="coffee image" />
+
+
 </body>
+
 </html>
